--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ migrate_working_dir/
 *.iws
 .idea/
 
-lib/core/utils/keys.dart
+lib/core/utils/strip_keys.dart
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
