--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_stripe: ^10.1.1
   dio: ^5.4.3+1
   dartz: ^0.10.1
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
