--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   bloc: ^8.1.4
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
+  flutter_credit_card: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
