--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_credit_card: ^4.0.1
   font_awesome_flutter: ^10.7.0
+  flutter_paypal_payment: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
